:see_no_evil: .gitignore 중복 파일 제거

--- a/PlaceStory/.gitignore
+++ b/PlaceStory/.gitignore
@@ -97,6 +97,8 @@ xcuserdata
 #         xcschememanagement.plist
 #
 #
+*.xcuserstate
+*.xcschememanagement.plist
 
 ####
 # Xcode 4 - Deprecated classes
