--- a/PlaceStory/PlaceStory/PlaceStory.entitlements
+++ b/PlaceStory/PlaceStory/PlaceStory.entitlements
@@ -6,5 +6,9 @@
 	<array>
 		<string>Default</string>
 	</array>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)randychoi.PlaceStory</string>
+	</array>
 </dict>
 </plist>
