:see_no_evil: .gitignore 내용 추가
- xcodeproj 안의 불필요파일 추가

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,8 @@ fastlane/test_output
 iOSInjectionProject/
 
 .DS_Store
+
+# xcodeproj 안의 불필요파일
+*.xcuserstate
+xcschememanagement.plist
+contents.xcworkspacedata
