:see_no_evil: .gitignore 수정
- *.xcuserstate 추가

--- a/.gitignore
+++ b/.gitignore
@@ -92,6 +92,6 @@ iOSInjectionProject/
 .DS_Store
 
 # xcodeproj 안의 불필요파일
-xcuserstate
+*.xcuserstate
 xcschememanagement.plist
 contents.xcworkspacedata
