--- a/.github/workflows/PlaceStory_CI.yml
+++ b/.github/workflows/PlaceStory_CI.yml
@@ -2,9 +2,9 @@ name: PlaceStory_CI
 
 on:
   push:
-    branches: [ "feature/*" ]
+    branches: [ "main, feature/*" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main, feature/*" ]
 
 jobs:
   build:
