--- a/.github/workflows/PlaceStory_CI.yml
+++ b/.github/workflows/PlaceStory_CI.yml
@@ -15,6 +15,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: |
-        xcodebuild clean test -project PlaceStory.xcodeproj \
+        xcodebuild clean test -project PlaceStory/PlaceStory.xcodeproj \
         -scheme PlaceStory \
         -destination "platform=iOS Simulator,name=iPhone 15,OS=latest"
