:lipstick: 장소기록 화면에 날짜 영역 추가
- textfield의 inputView에 datePicker를 표출하게 하여 날짜 선택하면 textfield에 선택된 날짜 표출

--- a/PlaceStory/PlaceStory.xcodeproj/xcshareddata/xcschemes/PlaceStory.xcscheme
+++ b/PlaceStory/PlaceStory.xcodeproj/xcshareddata/xcschemes/PlaceStory.xcscheme
@@ -26,8 +26,9 @@
             buildForProfiling = "NO"
             buildForArchiving = "NO"
             buildForAnalyzing = "NO">
-            <AutocreatedTestPlanReference>
-            </AutocreatedTestPlanReference>
+            <TestPlanReference
+               reference = "container:PlaceStory/Resources/PlaceStory.xctestplan">
+            </TestPlanReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
